# drf_comments_tree

./: Dockerfile  README.md  REDME.md  docker-compose.yml  pyproject.toml  requirements.txt
api/: admin.py  models.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py
blog/: settings.py  urls.py
